# Wehttam-Niri

./: .gitignore  README.md  install.sh  logo.txt  packages.txt
.config/: QtProject.conf  dolphinrc  easyeffectsrc  katerc  mimeapps.list
.config/DisplayCAL/: DisplayCAL-profile-info.ini  DisplayCAL-synthprofile.ini
.config/KDE/: UserFeedback.conf
.config/Thunar/: accels.scm
.config/fastfetch/: config.jsonc
.config/flameshot/: flameshot.ini
.config/goverlay/: kernel
.config/gtk-3.0/: bookmarks  gtk.css.backup.1773182194  settings.ini
.config/gtk-4.0/: noctalia.css  settings.ini
.config/pulse/: cookie
.config/pupgui/: config.ini
.config/session/: kate_2422dfaff-02a9-4129-a6d0-3671f8972c3d_1773169729_969721  kate_2e7eca10c-9662-4951-a30b-56577e7ab153_1773209127_31523
.config/shell/: aliases
apps/: QUICKSTART.md  config.kdl  config.rasi  create_widget.sh  logo.txt  mo2-linux-helper.html  wehttamsnaps-welcome.py
docs/: AUDIO-ROUTING.md  GAMING.md  INSTALL.md  JARVIS-INTEGRATION.md  KEYBINDS.md  QUICKSTART.md  TROUBLESHOOTING.md  install.sh
home/: .azotebg  .bash_history  .bashrc  .fehbg  .gitconfig  .gtkrc-2.0  .pulse-cookie  .wget-hsts  .xsession-errors  .xsession-errors.old  .zcompdump-snaps--pc-5.9  .zsh_history  .zshrc.pre-oh-my-zsh  aur_packages.list  main_packages.list
mo2-linux-helper/: Cargo.toml  index.html  package.json  vite.config.js
mo2-linux-helper/src/: App.svelte
mo2-linux-helper/src-tauri/: tauri.conf.json
mo2-linux-helper/src-tauri/src/: main.rs
scripts/: audio-setup.sh  toggle-gamemode.sh  widget-generator.sh
(+3398 files in other folders)
